--- a/glossar.tex
+++ b/glossar.tex
@@ -10,6 +10,7 @@
 \newacronym{fpga}{FPGA}{\textit{field programmable gate array}}
 \newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on graphics processing units}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
+\newacronym{hpc}{HPC}{\textit{high"=performance computing}}
 \newacronym{ii}{II}{\textit{initiation interval}}
 \newacronym{iob}{IOB}{\textit{input/output block}}
 \newacronym{lut}{LUT}{Lookup-Tabelle}
